force-app/main/default/objects/Avaya_Historical__c/Avaya_Historical__c.object-meta.xml
<CustomObject>
    <label>Avaya Historical</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Avaya Historical</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>