force-app/main/default/objects/Avaya_Historical__c/fields/Historical_Type__c.field-meta.xml
<CustomField>
    <fullName>Historical_Type__c</fullName>
    <label>Historical Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>auxoutofcalls</fullName>
            </value>
            <value>
                <fullName>Agents in AUX</fullName>
            </value>
            <value>
                <fullName>Split/Skill</fullName>
            </value>
            <value>
                <fullName>ABNCALLS</fullName>
            </value>
            <value>
                <fullName>ACD Calls</fullName>
            </value>
            <value>
                <fullName>Agents Staffed</fullName>
            </value>
            <value>
                <fullName>percentAbn</fullName>
            </value>
            <value>
                <fullName>INQUEUE</fullName>
            </value>
            <value>
                <fullName>auxoutCalls</fullName>
            </value>
            <value>
                <fullName>Agents Avail</fullName>
            </value>
            <value>
                <fullName>INRING</fullName>
            </value>
            <value>
                <fullName>% Within Service Level</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>